print option subscription data from deribit

--- a/deribit_api.ipynb
+++ b/deribit_api.ipynb
@@ -2,37 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "sunset-transfer",
+   "execution_count": 7,
+   "id": "provincial-metro",
    "metadata": {},
    "outputs": [],
    "source": [
     "import asyncio\n",
+    "import urllib.request, json\n",
     "import websockets\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import nest_asyncio"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "essential-roller",
+   "execution_count": 8,
+   "id": "employed-offense",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_dataframe(url, index_name):\n",
+    "nest_asyncio.apply()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "fifth-profit",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_dataframe(url, param, index_name):\n",
     "    #takes url for given deribit method we want to get and makes into a data frame\n",
     "    #we do this in the notebook since jupyter takes up a thread for asyncio and \n",
     "    #I don't know how to fix that by using multithreaded stuff yet\n",
     "    with urllib.request.urlopen(url) as url:\n",
     "        data = json.loads(url.read().decode())\n",
-    "    data = pd.DataFrame(data['result']).set_index(index_name)\n",
+    "    data = pd.DataFrame(data[param]).set_index(index_name)\n",
     "    return data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "compressed-surge",
+   "execution_count": 10,
+   "id": "coral-national",
    "metadata": {},
    "outputs": [
     {
@@ -98,83 +110,83 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>BTC-25JUN21</th>\n",
-       "      <td>1.827708e+07</td>\n",
-       "      <td>503.52</td>\n",
+       "      <td>1.402436e+07</td>\n",
+       "      <td>367.83</td>\n",
        "      <td>USD</td>\n",
-       "      <td>-3.7605</td>\n",
-       "      <td>46973090</td>\n",
-       "      <td>36956.50</td>\n",
-       "      <td>36950.92</td>\n",
-       "      <td>35174.0</td>\n",
-       "      <td>36942.0</td>\n",
-       "      <td>38385.5</td>\n",
-       "      <td>34880.32</td>\n",
-       "      <td>1610895827423</td>\n",
-       "      <td>36948.0</td>\n",
+       "      <td>5.8344</td>\n",
+       "      <td>69194660</td>\n",
+       "      <td>36205.75</td>\n",
+       "      <td>36235.11</td>\n",
+       "      <td>33653.5</td>\n",
+       "      <td>37032.5</td>\n",
+       "      <td>41302.0</td>\n",
+       "      <td>34172.89</td>\n",
+       "      <td>1611961926556</td>\n",
+       "      <td>36177.0</td>\n",
        "      <td>BTC</td>\n",
-       "      <td>36965.0</td>\n",
+       "      <td>36234.5</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>BTC-26MAR21</th>\n",
-       "      <td>2.856233e+07</td>\n",
-       "      <td>791.62</td>\n",
+       "      <td>7.252970e+07</td>\n",
+       "      <td>1976.41</td>\n",
        "      <td>USD</td>\n",
-       "      <td>-8.1245</td>\n",
-       "      <td>295570690</td>\n",
-       "      <td>36203.75</td>\n",
-       "      <td>36210.26</td>\n",
-       "      <td>34297.0</td>\n",
-       "      <td>36204.0</td>\n",
-       "      <td>39518.0</td>\n",
-       "      <td>34880.32</td>\n",
-       "      <td>1610895827423</td>\n",
-       "      <td>36195.5</td>\n",
+       "      <td>3.1940</td>\n",
+       "      <td>264198130</td>\n",
+       "      <td>35192.25</td>\n",
+       "      <td>35179.99</td>\n",
+       "      <td>32621.0</td>\n",
+       "      <td>35135.5</td>\n",
+       "      <td>40106.5</td>\n",
+       "      <td>34172.89</td>\n",
+       "      <td>1611961926556</td>\n",
+       "      <td>35184.5</td>\n",
        "      <td>BTC</td>\n",
-       "      <td>36212.0</td>\n",
+       "      <td>35200.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>BTC-24SEP21</th>\n",
-       "      <td>1.448887e+07</td>\n",
-       "      <td>373.50</td>\n",
+       "      <td>1.284052e+07</td>\n",
+       "      <td>337.80</td>\n",
        "      <td>USD</td>\n",
-       "      <td>-6.6842</td>\n",
-       "      <td>84602270</td>\n",
-       "      <td>37768.50</td>\n",
-       "      <td>37781.05</td>\n",
-       "      <td>37650.0</td>\n",
-       "      <td>38119.5</td>\n",
-       "      <td>41363.0</td>\n",
-       "      <td>34880.32</td>\n",
-       "      <td>1610895827423</td>\n",
-       "      <td>37743.5</td>\n",
+       "      <td>6.8390</td>\n",
+       "      <td>240133410</td>\n",
+       "      <td>37293.50</td>\n",
+       "      <td>37364.53</td>\n",
+       "      <td>34448.0</td>\n",
+       "      <td>38078.5</td>\n",
+       "      <td>41995.5</td>\n",
+       "      <td>34172.89</td>\n",
+       "      <td>1611961926556</td>\n",
+       "      <td>37230.0</td>\n",
        "      <td>BTC</td>\n",
-       "      <td>37793.5</td>\n",
+       "      <td>37357.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>BTC-PERPETUAL</th>\n",
-       "      <td>1.715352e+09</td>\n",
-       "      <td>47877.92</td>\n",
+       "      <td>1.260354e+09</td>\n",
+       "      <td>34809.23</td>\n",
        "      <td>USD</td>\n",
-       "      <td>-6.4234</td>\n",
-       "      <td>1853980552</td>\n",
-       "      <td>34887.75</td>\n",
-       "      <td>34887.53</td>\n",
-       "      <td>33495.5</td>\n",
-       "      <td>34883.5</td>\n",
-       "      <td>38328.5</td>\n",
-       "      <td>34880.32</td>\n",
-       "      <td>1610895827423</td>\n",
-       "      <td>34887.0</td>\n",
+       "      <td>2.0395</td>\n",
+       "      <td>1850390972</td>\n",
+       "      <td>34195.25</td>\n",
+       "      <td>34194.06</td>\n",
+       "      <td>32000.0</td>\n",
+       "      <td>34197.0</td>\n",
+       "      <td>39123.0</td>\n",
+       "      <td>34172.89</td>\n",
+       "      <td>1611961926556</td>\n",
+       "      <td>34193.5</td>\n",
        "      <td>BTC</td>\n",
-       "      <td>34888.5</td>\n",
-       "      <td>0.000021</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>34197.0</td>\n",
+       "      <td>0.000494</td>\n",
+       "      <td>0.00012</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -183,53 +195,257 @@
       "text/plain": [
        "                   volume_usd    volume quote_currency  price_change  \\\n",
        "instrument_name                                                        \n",
-       "BTC-25JUN21      1.827708e+07    503.52            USD       -3.7605   \n",
-       "BTC-26MAR21      2.856233e+07    791.62            USD       -8.1245   \n",
-       "BTC-24SEP21      1.448887e+07    373.50            USD       -6.6842   \n",
-       "BTC-PERPETUAL    1.715352e+09  47877.92            USD       -6.4234   \n",
+       "BTC-25JUN21      1.402436e+07    367.83            USD        5.8344   \n",
+       "BTC-26MAR21      7.252970e+07   1976.41            USD        3.1940   \n",
+       "BTC-24SEP21      1.284052e+07    337.80            USD        6.8390   \n",
+       "BTC-PERPETUAL    1.260354e+09  34809.23            USD        2.0395   \n",
        "\n",
        "                 open_interest  mid_price  mark_price      low     last  \\\n",
        "instrument_name                                                           \n",
-       "BTC-25JUN21           46973090   36956.50    36950.92  35174.0  36942.0   \n",
-       "BTC-26MAR21          295570690   36203.75    36210.26  34297.0  36204.0   \n",
-       "BTC-24SEP21           84602270   37768.50    37781.05  37650.0  38119.5   \n",
-       "BTC-PERPETUAL       1853980552   34887.75    34887.53  33495.5  34883.5   \n",
+       "BTC-25JUN21           69194660   36205.75    36235.11  33653.5  37032.5   \n",
+       "BTC-26MAR21          264198130   35192.25    35179.99  32621.0  35135.5   \n",
+       "BTC-24SEP21          240133410   37293.50    37364.53  34448.0  38078.5   \n",
+       "BTC-PERPETUAL       1850390972   34195.25    34194.06  32000.0  34197.0   \n",
        "\n",
        "                    high  estimated_delivery_price  creation_timestamp  \\\n",
        "instrument_name                                                          \n",
-       "BTC-25JUN21      38385.5                  34880.32       1610895827423   \n",
-       "BTC-26MAR21      39518.0                  34880.32       1610895827423   \n",
-       "BTC-24SEP21      41363.0                  34880.32       1610895827423   \n",
-       "BTC-PERPETUAL    38328.5                  34880.32       1610895827423   \n",
+       "BTC-25JUN21      41302.0                  34172.89       1611961926556   \n",
+       "BTC-26MAR21      40106.5                  34172.89       1611961926556   \n",
+       "BTC-24SEP21      41995.5                  34172.89       1611961926556   \n",
+       "BTC-PERPETUAL    39123.0                  34172.89       1611961926556   \n",
        "\n",
        "                 bid_price base_currency  ask_price  funding_8h  \\\n",
        "instrument_name                                                   \n",
-       "BTC-25JUN21        36948.0           BTC    36965.0         NaN   \n",
-       "BTC-26MAR21        36195.5           BTC    36212.0         NaN   \n",
-       "BTC-24SEP21        37743.5           BTC    37793.5         NaN   \n",
-       "BTC-PERPETUAL      34887.0           BTC    34888.5    0.000021   \n",
+       "BTC-25JUN21        36177.0           BTC    36234.5         NaN   \n",
+       "BTC-26MAR21        35184.5           BTC    35200.0         NaN   \n",
+       "BTC-24SEP21        37230.0           BTC    37357.0         NaN   \n",
+       "BTC-PERPETUAL      34193.5           BTC    34197.0    0.000494   \n",
        "\n",
        "                 current_funding  \n",
        "instrument_name                   \n",
        "BTC-25JUN21                  NaN  \n",
        "BTC-26MAR21                  NaN  \n",
        "BTC-24SEP21                  NaN  \n",
-       "BTC-PERPETUAL                0.0  "
+       "BTC-PERPETUAL            0.00012  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "make_dataframe(\"https://test.deribit.com/api/v2/public/get_book_summary_by_currency?currency=BTC&kind=future\", 'instrument_name')"
+    "make_dataframe(\"https://test.deribit.com/api/v2/public/get_book_summary_by_currency?currency=BTC&kind=future\", 'result', 'instrument_name')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "complex-numbers",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msg = \\\n",
+    "    {\"jsonrpc\": \"2.0\",\n",
+    "     \"method\": \"public/subscribe\",\n",
+    "     \"id\": 42,\n",
+    "     \"params\": {\n",
+    "        \"channels\": [\"markprice.options.btc_usd\"]}\n",
+    "    }\n",
+    "\n",
+    "async def call_api(msg):\n",
+    "    async with websockets.connect('wss://test.deribit.com/ws/api/v2') as websocket:\n",
+    "       await websocket.send(msg)\n",
+    "       while websocket.open:\n",
+    "           response = await websocket.recv()\n",
+    "           data = response\n",
+    "           data = json.loads(data)\n",
+    "           #used_list = [i for i in data['params']]\n",
+    "           #used_list = pd.DataFrame.from_records(used_list)\n",
+    "           #data.keys()\n",
+    "           from pandas.io.json import json_normalize\n",
+    "           #data_normalized = json_normalize(data)\n",
+    "           if('result' in data):\n",
+    "               pass\n",
+    "           else:\n",
+    "               data_norm = json_normalize(data['params']['data'])\n",
+    "               print(data_norm)\n",
+    "               #await websocket.close()\n",
+    "               await websocket.close()\n",
+    "               return data_norm \n",
+    "                \n",
+    "                \n",
+    "           #data = pd.io.json.json_normalize(response, record_path = [['params', 'data']])\n",
+    "           #data = pd.json_normalize(data)\n",
+    "           #data = pd.DataFrame(data['result']).set_index('instrument_name')\n",
+    "           print(\"\\n\\n\")\n",
+    "           # do something with the notifications..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "enclosed-alarm",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\n",
+      "     mark_price        iv      instrument_name  synthetic_future.mark_price  \\\n",
+      "0      0.314776  0.883069  BTC-24SEP21-40000-P                          NaN   \n",
+      "1      0.000720  1.263131  BTC-26MAR21-11000-P                          NaN   \n",
+      "2      0.200256  0.856168  BTC-25JUN21-36000-P                          NaN   \n",
+      "3      0.033488  0.886022  BTC-26FEB21-30000-P                 35284.045028   \n",
+      "4      0.007926  1.258979   BTC-24SEP21-7000-P                          NaN   \n",
+      "..          ...       ...                  ...                          ...   \n",
+      "215    0.897701  1.438009   BTC-24SEP21-4000-C                          NaN   \n",
+      "216    0.143316  0.859497  BTC-26FEB21-32000-C                 35284.045028   \n",
+      "217    0.000003  0.843868  BTC-30JAN21-32000-P                 34760.751306   \n",
+      "218    0.749695  1.126150  BTC-24SEP21-10000-C                          NaN   \n",
+      "219    0.013698  1.126150  BTC-24SEP21-10000-P                          NaN   \n",
+      "\n",
+      "    synthetic_future.instrument_name  \n",
+      "0                                NaN  \n",
+      "1                                NaN  \n",
+      "2                                NaN  \n",
+      "3                    SYN.BTC-26FEB21  \n",
+      "4                                NaN  \n",
+      "..                               ...  \n",
+      "215                              NaN  \n",
+      "216                  SYN.BTC-26FEB21  \n",
+      "217                  SYN.BTC-30JAN21  \n",
+      "218                              NaN  \n",
+      "219                              NaN  \n",
+      "\n",
+      "[220 rows x 5 columns]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tjang/anaconda3/envs/ml/lib/python3.7/site-packages/ipykernel_launcher.py:23: FutureWarning: pandas.io.json.json_normalize is deprecated, use pandas.json_normalize instead\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = asyncio.get_event_loop().run_until_complete(call_api(json.dumps(msg)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "divine-bowling",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mark_price</th>\n",
+       "      <th>iv</th>\n",
+       "      <th>synthetic_future.mark_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>2.200000e+02</td>\n",
+       "      <td>220.000000</td>\n",
+       "      <td>102.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2.630576e-01</td>\n",
+       "      <td>0.995255</td>\n",
+       "      <td>35418.967854</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>4.043263e-01</td>\n",
+       "      <td>0.252631</td>\n",
+       "      <td>1059.600470</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.299362e-07</td>\n",
+       "      <td>0.599155</td>\n",
+       "      <td>34760.751306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1.339710e-02</td>\n",
+       "      <td>0.871313</td>\n",
+       "      <td>34780.132554</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>1.169068e-01</td>\n",
+       "      <td>0.926397</td>\n",
+       "      <td>35284.045028</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>4.262783e-01</td>\n",
+       "      <td>1.123887</td>\n",
+       "      <td>35284.045028</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>4.310500e+00</td>\n",
+       "      <td>2.500001</td>\n",
+       "      <td>38230.115000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         mark_price          iv  synthetic_future.mark_price\n",
+       "count  2.200000e+02  220.000000                   102.000000\n",
+       "mean   2.630576e-01    0.995255                 35418.967854\n",
+       "std    4.043263e-01    0.252631                  1059.600470\n",
+       "min    1.299362e-07    0.599155                 34760.751306\n",
+       "25%    1.339710e-02    0.871313                 34780.132554\n",
+       "50%    1.169068e-01    0.926397                 35284.045028\n",
+       "75%    4.262783e-01    1.123887                 35284.045028\n",
+       "max    4.310500e+00    2.500001                 38230.115000"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.describe()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "single-evanescence",
+   "id": "horizontal-triangle",
    "metadata": {},
    "outputs": [],
    "source": []
