fix gex being set into a variable that doesn't exist

--- a/pysql_test.ipynb
+++ b/pysql_test.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 298,
-   "id": "corrected-elite",
+   "id": "suitable-viking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 299,
-   "id": "hourly-commission",
+   "id": "eastern-sunglasses",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 300,
-   "id": "baking-mexican",
+   "id": "professional-boating",
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 301,
-   "id": "combined-siemens",
+   "id": "neither-guidance",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 302,
-   "id": "hungry-canada",
+   "id": "consistent-configuration",
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 303,
-   "id": "stock-liverpool",
+   "id": "occupied-experiment",
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": 304,
-   "id": "dutch-resolution",
+   "id": "commercial-london",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": 305,
-   "id": "adequate-initial",
+   "id": "vocal-yorkshire",
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 306,
-   "id": "bibliographic-yield",
+   "id": "informative-arbitration",
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": 361,
-   "id": "bizarre-budget",
+   "id": "documentary-owner",
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": 373,
-   "id": "stock-court",
+   "id": "extended-groove",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -828,7 +828,7 @@
   {
    "cell_type": "code",
    "execution_count": 374,
-   "id": "remarkable-teens",
+   "id": "written-fashion",
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": 375,
-   "id": "classical-favor",
+   "id": "prepared-henry",
    "metadata": {},
    "outputs": [
     {
@@ -1030,18 +1030,18 @@
   {
    "cell_type": "code",
    "execution_count": 379,
-   "id": "inclusive-celtic",
+   "id": "noble-government",
    "metadata": {},
    "outputs": [],
    "source": [
     "total_gamma = no_stale['amount'] * greeks['gamma']\n",
-    "gex = sum(gamma_per_trade)"
+    "gex = sum(total_gamma)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "preceding-tracy",
+   "id": "intelligent-community",
    "metadata": {},
    "outputs": [],
    "source": []
