Calculate vanna + vex

--- a/pysql_test.ipynb
+++ b/pysql_test.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "id": "latin-attack",
+   "execution_count": 1,
+   "id": "typical-breast",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pymysql\n",
     "import math\n",
     "import scipy.stats as stat\n",
+    "from scipy.stats import norm\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import urllib.request, json"
@@ -18,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "under-verse",
+   "id": "stretch-cornwall",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "paperback-wisconsin",
+   "id": "fancy-spell",
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "lovely-waterproof",
+   "id": "finite-moisture",
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "burning-crash",
+   "id": "nearby-association",
    "metadata": {},
    "outputs": [
     {
@@ -289,21 +290,13 @@
    ],
    "source": [
     "new_trade = df.iloc[-1]\n",
-    "new_trade\n",
-    "#call get_sql_df to get dataframe of all options\n",
-    "#call get_instrument on each instrument_name to see if its active or not\n",
-    "#create new dataframe based on that\n",
-    "#add new_trade to new dataframe\n",
-    "#call get_order_book on the new dataframe (since it has only active options)\n",
-    "#calculate new gamma/vex/ddoi\n",
-    "#MAYBE: remove any old sql stuff and store them?\n",
-    "#post new trade info + gamma/vex/ddoi"
+    "new_trade"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "temporal-steal",
+   "execution_count": 6,
+   "id": "republican-bristol",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +476,7 @@
        "5       1   10   20     0  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,8 +488,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "architectural-admission",
+   "execution_count": 7,
+   "id": "competent-theater",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,18 +519,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "atlantic-salad",
+   "execution_count": 8,
+   "id": "efficient-jimmy",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iname:  BTC-5MAR21-57000-P\n",
+      "iname:  BTC-5MAR21-57000-C\n",
+      "iname:  BTC-5MAR21-60000-C\n",
+      "iname:  BTC-26FEB21-54000-C\n",
+      "iname:  BTC-21FEB21-56000-P\n"
+     ]
+    }
+   ],
    "source": [
     "no_stale = get_instrument(testingdf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "environmental-fourth",
+   "execution_count": 9,
+   "id": "military-postcard",
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +617,7 @@
        "0      10   10   10     0  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,8 +628,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "american-medium",
+   "execution_count": 10,
+   "id": "double-average",
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +725,7 @@
        "[1 rows x 26 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,8 +741,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "id": "scientific-mouse",
+   "execution_count": 11,
+   "id": "drawn-settlement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,8 +759,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "id": "oriented-karma",
+   "execution_count": 12,
+   "id": "accomplished-animal",
    "metadata": {},
    "outputs": [
     {
@@ -805,27 +810,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>50440.4</td>\n",
+       "      <td>54836.6</td>\n",
        "      <td>BTC-26MAR21</td>\n",
-       "      <td>1615149135606</td>\n",
+       "      <td>1615306097945</td>\n",
        "      <td>{'volume': None, 'price_change': None, 'low': ...</td>\n",
        "      <td>open</td>\n",
-       "      <td>0.17</td>\n",
-       "      <td>166.4</td>\n",
-       "      <td>0.0001</td>\n",
-       "      <td>0.351</td>\n",
-       "      <td>0.151242</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>174.5</td>\n",
+       "      <td>0.017</td>\n",
+       "      <td>0.4165</td>\n",
+       "      <td>0.216825</td>\n",
        "      <td>...</td>\n",
-       "      <td>49873.1</td>\n",
-       "      <td>5435841367</td>\n",
-       "      <td>[]</td>\n",
+       "      <td>54234.6</td>\n",
+       "      <td>5449196118</td>\n",
+       "      <td>[[0.001, 0.4]]</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.3255</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.336</td>\n",
        "      <td>30</td>\n",
-       "      <td>[[0.3255, 30.0], [0.3275, 0.1]]</td>\n",
-       "      <td>400.34</td>\n",
+       "      <td>[[0.336, 30.0]]</td>\n",
+       "      <td>400.01</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -834,24 +839,24 @@
       ],
       "text/plain": [
        "  underlying_price underlying_index      timestamp  \\\n",
-       "0          50440.4      BTC-26MAR21  1615149135606   \n",
+       "0          54836.6      BTC-26MAR21  1615306097945   \n",
        "\n",
        "                                               stats state settlement_price  \\\n",
-       "0  {'volume': None, 'price_change': None, 'low': ...  open             0.17   \n",
+       "0  {'volume': None, 'price_change': None, 'low': ...  open             0.09   \n",
        "\n",
        "  open_interest min_price max_price mark_price  ... estimated_delivery_price  \\\n",
-       "0         166.4    0.0001     0.351   0.151242  ...                  49873.1   \n",
+       "0         174.5     0.017    0.4165   0.216825  ...                  54234.6   \n",
        "\n",
-       "    change_id bids bid_iv best_bid_price best_bid_amount best_ask_price  \\\n",
-       "0  5435841367   []      0              0               0         0.3255   \n",
+       "    change_id            bids bid_iv best_bid_price best_bid_amount  \\\n",
+       "0  5449196118  [[0.001, 0.4]]      0          0.001             0.4   \n",
        "\n",
-       "  best_ask_amount                             asks  ask_iv  \n",
-       "0              30  [[0.3255, 30.0], [0.3275, 0.1]]  400.34  \n",
+       "  best_ask_price best_ask_amount             asks  ask_iv  \n",
+       "0          0.336              30  [[0.336, 30.0]]  400.01  \n",
        "\n",
        "[1 rows x 26 columns]"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,8 +870,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "id": "capable-circus",
+   "execution_count": 13,
+   "id": "judicial-building",
    "metadata": {},
    "outputs": [
     {
@@ -898,6 +903,7 @@
        "      <th>underlying_price</th>\n",
        "      <th>underlying_index</th>\n",
        "      <th>open_interest</th>\n",
+       "      <th>interest_rate</th>\n",
        "      <th>mark_iv</th>\n",
        "      <th>vanna</th>\n",
        "    </tr>\n",
@@ -905,15 +911,16 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>45.15289</td>\n",
-       "      <td>-244.56756</td>\n",
-       "      <td>9.65644</td>\n",
-       "      <td>0.00002</td>\n",
-       "      <td>0.52941</td>\n",
-       "      <td>50440.4</td>\n",
+       "      <td>44.73626</td>\n",
+       "      <td>-335.85725</td>\n",
+       "      <td>10.00157</td>\n",
+       "      <td>0.00001</td>\n",
+       "      <td>0.61639</td>\n",
+       "      <td>54836.6</td>\n",
        "      <td>BTC-26MAR21</td>\n",
-       "      <td>166.4</td>\n",
-       "      <td>200.17</td>\n",
+       "      <td>174.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>250.17</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -921,20 +928,20 @@
        "</div>"
       ],
       "text/plain": [
-       "       vega      theta      rho    gamma    delta underlying_price  \\\n",
-       "0  45.15289 -244.56756  9.65644  0.00002  0.52941          50440.4   \n",
+       "       vega      theta       rho    gamma    delta underlying_price  \\\n",
+       "0  44.73626 -335.85725  10.00157  0.00001  0.61639          54836.6   \n",
        "\n",
-       "  underlying_index open_interest mark_iv  vanna  \n",
-       "0      BTC-26MAR21         166.4  200.17    NaN  "
+       "  underlying_index open_interest interest_rate mark_iv  vanna  \n",
+       "0      BTC-26MAR21         174.5             0  250.17    NaN  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "columns = greeks.loc[:, ['underlying_price','underlying_index', 'open_interest', 'mark_iv', 'greeks']]\n",
+    "columns = greeks.loc[:, ['underlying_price','underlying_index', 'open_interest','interest_rate', 'mark_iv', 'greeks']]\n",
     "greeks = pd.DataFrame(columns['greeks'].values.tolist())\n",
     "columns = columns.drop(['greeks'], axis = 1)\n",
     "greeks = greeks.join(columns)\n",
@@ -945,29 +952,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "id": "certified-plaza",
+   "execution_count": null,
+   "id": "changing-addition",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "mathematical-folks",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_gex(active_trades, active_trades_greeks):\n",
-    "    total_gamma = active_trades['amount'] * active_trades_greeks['gamma']\n",
+    "    total_gamma = active_trades['amount'] * active_trades_greeks['gamma'] * active_trades['direction']\n",
     "    return sum(total_gamma)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "id": "comic-boring",
+   "execution_count": 15,
+   "id": "vietnamese-roots",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0002"
+       "0.0001"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -978,51 +993,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "id": "allied-sunday",
+   "execution_count": 16,
+   "id": "floppy-aggregate",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_vanna(active_trades, greeks):\n",
-    "    print(active_trades[1:])\n",
-    "    return (pd.to_datetime(active_trades[1:].index.map(lambda x: x.split('-')[1]))-pd.Timestamp.today()).days\n",
+    "    #get days till expiration from active trades and add as a series\n",
+    "    dte = pd.to_datetime(active_trades['instrument_name'].apply(lambda x: x.split('-')[1]))-pd.Timestamp.today()\n",
+    "    strike = active_trades['instrument_name'].apply(lambda x: x.split('-')[2]).astype(int)\n",
+    "    active_trades['strike'] = strike\n",
+    "    #active_trades.astype({'strike': 'int32'}).dtypes\n",
+    "    active_trades['dte'] = dte.dt.days\n",
+    "    sigmaT = greeks['mark_iv'] * active_trades['dte'] ** 0.5\n",
+    "    d1 = (math.log(greeks['underlying_price'] / active_trades['strike']) + \\\n",
+    "                   (greeks['interest_rate'] * 0.5 * (greeks['mark_iv'] ** 2)) \\\n",
+    "                   * active_trades['dte']) / sigmaT\n",
+    "    d2 = d1 - sigmaT\n",
+    "    vannas = []\n",
+    "    #we'd like to vectorize this but d1 norm.pdf(d1) is not trivial due to some stupid type error\n",
+    "    #I can't be bothered to figure out right now\n",
+    "    for i in range(active_trades.shape[0]):\n",
+    "        vannas.append(0.01 * -math.e ** active_trades['dte'][i] * d2[i] / greeks['mark_iv'][i] * norm.pdf(d1[i]))\n",
+    "    return vannas\n",
     "    #[0.01 * -e ** (-self.q * self.T) * self.d2 / self.sigma * norm.pdf(self.d1)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "id": "polished-adjustment",
+   "execution_count": 17,
+   "id": "athletic-davis",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Empty DataFrame\n",
-      "Columns: [MyUnknownColumn, trade_seq, trade_id, timestamp, tick_direction, price, mark_price, iv, instrument_name, index_price, direction, amount, gex, vex, ddoi]\n",
-      "Index: []\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Int64Index([], dtype='int64')"
-      ]
-     },
-     "execution_count": 105,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "get_vanna(no_stale, greeks)"
+    "vanna = get_vanna(no_stale, greeks)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "grateful-museum",
+   "execution_count": 18,
+   "id": "strong-bahamas",
    "metadata": {},
    "outputs": [
     {
@@ -1046,43 +1056,113 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>vega</th>\n",
-       "      <th>theta</th>\n",
-       "      <th>rho</th>\n",
-       "      <th>gamma</th>\n",
-       "      <th>delta</th>\n",
-       "      <th>underlying_price</th>\n",
-       "      <th>underlying_index</th>\n",
-       "      <th>open_interest</th>\n",
-       "      <th>mark_iv</th>\n",
-       "      <th>vanna</th>\n",
+       "      <th>MyUnknownColumn</th>\n",
+       "      <th>trade_seq</th>\n",
+       "      <th>trade_id</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>tick_direction</th>\n",
+       "      <th>price</th>\n",
+       "      <th>mark_price</th>\n",
+       "      <th>iv</th>\n",
+       "      <th>instrument_name</th>\n",
+       "      <th>index_price</th>\n",
+       "      <th>direction</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>gex</th>\n",
+       "      <th>vex</th>\n",
+       "      <th>ddoi</th>\n",
+       "      <th>strike</th>\n",
+       "      <th>dte</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>64622797</td>\n",
+       "      <td>1613793025351</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.1625</td>\n",
+       "      <td>0.245046</td>\n",
+       "      <td>107.69</td>\n",
+       "      <td>BTC-26MAR21-54000-C</td>\n",
+       "      <td>55753.42</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>54000</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [vega, theta, rho, gamma, delta, underlying_price, underlying_index, open_interest, mark_iv, vanna]\n",
-       "Index: []"
+       "   MyUnknownColumn  trade_seq  trade_id      timestamp  tick_direction  \\\n",
+       "0                0          3  64622797  1613793025351               0   \n",
+       "\n",
+       "    price  mark_price      iv      instrument_name  index_price  direction  \\\n",
+       "0  0.1625    0.245046  107.69  BTC-26MAR21-54000-C     55753.42          1   \n",
+       "\n",
+       "   amount  gex  vex  ddoi  strike  dte  \n",
+       "0      10   10   10     0   54000   16  "
       ]
      },
-     "execution_count": 108,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "no_stale"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "manual-cleaners",
+   "execution_count": 19,
+   "id": "coated-extent",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_vex(active_trades, greeks):\n",
+    "    vanna = get_vanna(active_trades, greeks)\n",
+    "    return vanna * no_stale['amount'] * no_stale['direction']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "fabulous-selection",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vex = get_vex(no_stale, greeks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "lonely-argentina",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1.418018e+06\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vex"
+   ]
   }
  ],
  "metadata": {
